src/objects/Stakeholder_group__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Project</label>
        <referenceTo>PI_Project__c</referenceTo>
        <relationshipLabel>Stakeholder Groups</relationshipLabel>
        <relationshipName>Stakeholder_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stakeholder Groups</relationshipLabel>
        <relationshipName>Stakeholder_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stakeholder Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SG-{000000}</displayFormat>
        <label>Stakeholder Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>